--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -2,8 +2,8 @@
 - hosts: 127.0.0.1
   connection: local
   become: true
-  vars:
-    packages:
-      - git
+  # vars:
+  #   packages:
+  #     - git
   roles:
     - apt
