Few more packages

--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -20,6 +20,10 @@
       - jq
       - curl
       - nfs-common
+      - xdg-open
+      - unzip
+      - wget
+      - gpg
     update_cache: yes
     cache_valid_time: 3600
     state: latest
