--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -20,3 +20,11 @@
     update_cache: yes
     cache_valid_time: 3600
     state: latest
+
+- name: Mount an NFS volume
+  ansible.posix.mount:
+    src: jumpbox-zpffa7q8-efs-euwest2.mgt.portal.internal.ipc.com:/
+    path: /opt/ipc/home
+    opts: nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport,_netdev
+    state: mounted
+    fstype: nfs
