--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -13,7 +13,7 @@
 #   loop: "{{ packages }}"
 
 - name: "install packages"
-  apt:
+  ansible.builtin.apt:
     name:
       - nfs-common
       - unzip
@@ -25,6 +25,8 @@
   ansible.posix.mount:
     src: jumpbox-zpffa7q8-efs-euwest2.mgt.portal.internal.ipc.com:/
     path: /opt/ipc/home
-    opts: nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport,_netdev
+    opts: nfsvers=4.1
+    #opts: nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport,_netdev
+    boot: true
     state: mounted
-    fstype: nfs
+    fstype: nfs4
