--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -21,12 +21,16 @@
     cache_valid_time: 3600
     state: latest
 
+- name: Get current AZ from AWS
+  uri:
+    url: http://169.254.169.254/latest/meta-data/placement/availability-zone
+    return_content: yes
+  register: aws_current_az
+
 - name: Mount an NFS volume
   ansible.posix.mount:
-    src: jumpbox-zpffa7q8-efs-euwest2.mgt.portal.internal.ipc.com:/
+    src: "{{ aws_current_az.content }}.fs-06f3877b4904a4194.efs.eu-west-2.amazonaws.com"
     path: /opt/ipc/home
     opts: nfsvers=4.1
-    #opts: nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport,_netdev
-    boot: true
     state: mounted
     fstype: nfs4
