Use full a module name

--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -22,7 +22,7 @@
     state: latest
 
 - name: Get current AZ from AWS
-  uri:
+  ansible.builtin.uri:
     url: http://169.254.169.254/latest/meta-data/placement/availability-zone
     return_content: yes
   register: aws_current_az
