do we have required permissions to run?

--- a/jumpbox.yml
+++ b/jumpbox.yml
@@ -2,6 +2,8 @@
 - hosts: 127.0.0.1
   connection: local
   gather_facts: yes
-  become: true
+  ansible_become: true
+  ansible_become_user: root
+  ansible_user: ubuntu
   roles:
     - jumpbox
